5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1601_2043.log
== TEST (2019-03-23 09:45:07) 
-- CODE:
n1=float(input())
n2=float(input())
n3=float(input())

print((n1*1+n2*2+n3*3)/10)
-- OUTPUT:
4.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 09:45:27) 
-- CODE:
n1=float(input())
n2=float(input())
n3=float(input())

print((n1*1+n2*2+n3*3)/10)
-- EXECUTION TIME:
0.188479
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
4.6
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
4.2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
4.340000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 09:45:43) 
-- CODE:
n1=float(input())
n2=float(input())
n3=float(input())

print((n1*1+n2*2+n3*3)/10)
-- OUTPUT:
4.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 09:46:07) 
-- CODE:
n1= float(input())
n2= float(input())
n3 = float(input())

print((n1*1+n2*2+n3*3)/10)
-- OUTPUT:
4.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 09:46:32) 
-- CODE:
n1= float(input())
n2= float(input())
n3 = float(input())

print((n1*1+n2*2+n3*3)/10)
-- OUTPUT:
4.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 09:47:15) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())

print(round((n1*1+n2*2+n3*3)/10),2)
-- EXECUTION TIME:
0.194751
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
5 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
4 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
4 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 09:47:27) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())

print(round((n1*1+n2*2+n3*3)/10),2)
-- OUTPUT:
5 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 09:47:43) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())

print(round((n1*1+n2*2+n3*3)/10),2)
-- OUTPUT:
5 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 09:49:17) 
-- CODE:
n1= int(input())
n2= int(input())
n3 =int(input())

print(round((n1*1 + n2*2 + n3*3)/10),2)
-- EXECUTION TIME:
0.129983
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/2043/main.py", line 2, in <module>
    n2= int(input())
ValueError: invalid literal for int() with base 10: '8.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 09:49:19) 
-- CODE:
n1= int(input())
n2= int(input())
n3 =int(input())

print(round((n1*1 + n2*2 + n3*3)/10),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n2= int(input())
ValueError: invalid literal for int() with base 10: '8.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 09:50:04) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())

print(round((n1*1 + n2*2 + n3*3)/10),2)
-- OUTPUT:
5 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 09:50:19) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())

print(round((n1*1 + n2*2 + n3*3)/10),2)
-- OUTPUT:
5 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:02:44) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())

print(round((n1*1 + n2*2 + n3*3)/10),2)
-- EXECUTION TIME:
0.15722
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
5 2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
4 2
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
4 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:02:46) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())

print(round((n1*1 + n2*2 + n3*3)/10),2)
-- OUTPUT:
5 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:04:42) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4= float(input())

print(round((n1*1 + n2*2 + n3*3+ n4*4)/10),1)
-- OUTPUT:
8 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:07:48) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4= float(input())

print(round((n1*1 + (n2*2) + (n3*3)+ (n4*4))/10),1)
-- EXECUTION TIME:
0.200188
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8 1
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7 1
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
8 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:07:55) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4= float(input())

print(round((n1*1 + (n2*2) + (n3*3)+ (n4*4))/10),1)
-- OUTPUT:
8 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:10:50) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4= float(input())
m=((n1*1) + (n2*2) + (n3*3)+ (n4*4))/10)
print(round(m,1)
-- EXECUTION TIME:
0.138896
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 5
    m=((n1*1) + (n2*2) + (n3*3)+ (n4*4))/10)
                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:17:49) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4= float(input())
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/10)
print(round(m,1))
-- EXECUTION TIME:
0.193661
-- ERROR:
  File "/home/codebench/codes/1601/2043/main.py", line 5
    m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/10)
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:18:24) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4= float(input())
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/4)
print(round(m,1))
-- ERROR:
File "XXXX", line 5
    m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/4)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:19:06) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4= float(input())
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/4
print(round(m,1))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:19:23) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4= float(input())
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/4
print(round(m,1))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:19:52) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4 =float(input())
			 
			 
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/4
print(round(m,1))
-- EXECUTION TIME:
0.250383
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
20.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
17.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
19.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:19:54) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4 =float(input())
			 
			 
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/4
print(round(m,1))
-- OUTPUT:
20.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:21:17) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4 =float(input())
			 
			 
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/10
print(round(m,1))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:21:35) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4 =float(input())
			 
			 
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/10
print(round(m,1))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:21:45) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4 =float(input())
			 
			 
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/10
print(round(m,1))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:21:54) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4 =float(input())
			 
			 
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/10
print(round(m,1))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 10:22:00) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4 =float(input())
			 
			 
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/10
print(round(m,1))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:22:14) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4 =float(input())
			 
			 
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/10
print(round(m,1))
-- EXECUTION TIME:
0.144464
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 10:22:30) 
-- CODE:
n1= float(input())
n2= float(input())
n3 =float(input())
n4 =float(input())
			 
			 
m=((n1*1)+(n2*2)+(n3*3)+ (n4*4))/10
print(round(m,2))
-- EXECUTION TIME:
0.129617
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
